# Competitve_Programming_Reference

./: CMakeLists.txt  README.md
CP_Problem_Solutions/: FirstQuestion.cpp  NotAdjacentMatrix.cpp  QueryForcesSol.cpp  StillToBeSol.cpp  main.cpp
Templates/: Bit_Masks.h  Graph_Algorithms.h  Imp_Notes.h  Number_Theory.h
